--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<main>
 			<img src="chinesewoman.jpg" alt="Mujer posando">
 			<section>
-				<h1>Título Principal</h1>
+				<h1>Práctica Jam</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
