cambios de pagina

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<ul>
 					<li><a href="Inicio">Inicio</a></li>
 					<li><a href="Servicios">Servicios</a></li>
-					<li><a href="Contacto">Contacto</a></li>
+					<li><a href="Contactanos">Contactanos</a></li>
 					
 				</ul>
 			</nav>
